apps/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-coroot-demo
  namespace: java-demo
spec:
  selector:
    app: java-coroot-demo
  ports:
  - port: 8080
    targetPort: 8080
