apps/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-coroot-demo
  namespace: java-demo
spec:
  ingressClassName: traefik
  rules:
  - host: java-demo.platform.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: java-coroot-demo
            port:
              number: 8080
